Refactor: FoundResponse 삭제 및 Response로 통합
- Response에서 addRedirectLocation(), addSetCookie() 등 헤더에 내용을 추가할 수 있는 메서드를 작성해 Response 객체로 다양한 응답코드에 대응할 수 있도록 설계 변경.